# annual_report_database

./: .gitignore  .~lock.Schweizerische Nationalbank.csv#  .~lock.files.csv#  Cargo.toml  Companies.md  DocumentType.csv  GV-Kalender.xlsx  README.md  TODO.md  TODO.txt  files.csv
Sources/: ABB Ltd.csv  ABB.csv  AMS.csv  Aargauische Kantonalbank.csv  Adecco Group AG.csv  Adecco.csv  Alcon Inc.csv  Alcon.csv  Allreal Holding AG.csv  Alternative Bank Schweiz.csv  Aryzta AG.csv  Aryzta.csv  BB Biotech AG.csv  BKW AG.csv  Baloise.csv  Banca dello Stato del Cantone Ticino.csv  Bank Vontobel.csv  Banque Cantonale Vaudoise.csv  Banque Cantonale de Fribourg.csv  Banque Cantonale de Genève.csv  Banque Cantonale du Valais.csv  Barry Callebaut AG.csv  Barry Callebaut.csv  Basler Kantonalbank.csv  Berner Kantonalbank AG.csv  Berner Kantonalbank.csv  Bucher Industries AG.csv  Bucher Industries.csv  Bâloise Holding AG.csv  Chocoladefabriken Lindt & Sprüngli AG.csv  Clariant AG.csv  Compagnie Financière Richemont SA.csv  Coop Genossenschaft.csv  Credit Suisse Group AG.csv  Credit Suisse.csv  Dormakaba.csv  Dufry AG.csv  Dufry.csv  Ems Chemie.csv  Ems-Chemie Holding AG.csv  (+102 more)
data/: DocumentType.csv  SNB-report-length.xlsx  files.csv
downloader/: Cargo.toml
metadata/: ABB Ltd.json  Aargauische Kantonalbank.json  Adecco Group AG.json  Alcon Inc.json  Allreal Holding AG.json  Alternative Bank Schweiz.json  Appenzeller Kantonalbank.json  Aryzta AG.json  BB Biotech AG.json  BKW AG.json  Banca dello Stato del Cantone Ticino.json  Banque Cantonale Vaudoise.json  Banque Cantonale de Fribourg.json  Banque Cantonale de Genève.json  Banque Cantonale de Jura.json  Banque Cantonale du Valais.json  (+110 more)
(+6 files in other folders)
