[package]
name = "annual_report_database"
version = "0.1.0"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2018"

[dependencies]
reqwest = {version = "0.10", features = ["blocking"] }
csv = "1.1"
serde_derive = "1.0"
serde = "1.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
simplelog = "0.8"
tokio = { version = "0.2", features = ["full"] }
walkdir = "2.3"
horrorshow = "0.8"
tree_magic = "0.2"
serde_json = "1.0"