[package]
name = "annual_report_database"
version = "0.1.0"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2018"

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "rustls-tls"] }
csv = "1.1"
serde_derive = "1.0"
serde = "1.0"
structopt = "0.3"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
simplelog = "0.12"
tokio = { version = "1.17", features = ["full"] }
walkdir = "2.3"
horrorshow = "0.8"
tree_magic = "0.2"
serde_json = "1.0"
lopdf = "0.27.0"
pdf-extract = "0.6.2"
trust-dns-resolver = "0.21.1"
decon-spf = "0.2.4"
viaspf = "0.4.0"
viaspf-record = "0.4.0"